# Grsim-Robok-Small

./: CMakeLists.txt.user.TR2364  Makefile  README.md
clients/qt/: CMakeLists.txt  Geometrics.cpp  Geometrics.h  Movement.cpp  Movement.h  Robot.cpp  Robot.h  Vision.cpp  Vision.h  config.h  fieldstate.cpp  fieldstate.h  grSim_Packet.pb.cc  grSim_Packet.pb.h  mainwindow.cpp  mainwindow.h  messages_robocup_ssl_detection.pb.cc  messages_robocup_ssl_detection.pb.h  teste.cpp  teste.h
clients/qt/Classes/: Ball.cpp  Ball.h  Fieldstate.cpp  Fieldstate.h  Geometrics.cpp  Geometrics.h  Movement.cpp  Movement.h  Robot.cpp  Robot.h  config.h
src/net/: robocup_ssl_client.cpp
ssl-vision-master/src/client/: main.cpp
ssl-vision-master/src/shared/net/: robocup_ssl_client.cpp
